# tcc-poc-ssi

./: .gitignore  Makefile  README.md  docker-compose.yml  make  notas.txt  self-sovereign-identity-collection.yaml  shikan.sh  start.sh
clients/governance/server/: README.md  pyproject.toml
clients/governance/server/db/: .env.example  docker-compose.yml
clients/governance/server/src/modules/: __init__.py
clients/governance/server/src/modules/auth/: routes.py  schema.py  service.py  setup.html
clients/governance/server/src/modules/clients/: routes.py  schema.py  service.py
clients/governance/server/src/modules/config/: app.py  settings.py
clients/governance/server/src/modules/ledger/: routes.py  schemas.py  service.py
clients/governance/server/src/modules/scheduler/: routes.py
clients/governance/server/src/modules/schemas/: routes.py  schemas.py  service.py
clients/governance/server/src/modules/steward/: routes.py  schema.py  service.py
clients/governance/server/src/modules/utils/: __init__.py  mongodb.py  repositories.py  scheduler.py
clients/issuer-verifier/server/: .dockerignore  pyproject.toml
clients/issuer-verifier/server/src/modules/auth/: routes.py  schema.py  service.py
clients/issuer-verifier/server/src/modules/client/: schemas.py
clients/issuer-verifier/server/src/modules/config/: app.py  settings.py
clients/issuer-verifier/server/src/modules/connection/: schema.py  service.py
clients/issuer-verifier/server/src/modules/credential/: routes.py  schema.py
clients/issuer-verifier/server/src/modules/invitation/: routes.py  schema.py  service.py
clients/issuer-verifier/server/src/modules/ledger/: routes.py  schemas.py  service.py
clients/issuer-verifier/server/src/modules/proof/: routes.py  schema.py  service.py
clients/issuer-verifier/server/src/modules/scheduler/: __init__.py  service.py
clients/issuer-verifier/server/src/modules/user/: service.py
clients/issuer-verifier/server/src/modules/utils/: auth_middleware.py  ssi.py
clients/issuer/server/: env.dev  pyproject.toml
clients/issuer/server/src/: main.py
clients/issuer/server/src/modules/: __init__.py
files/: Dockerfile  (+1 more)
(+216 files in other folders)
