[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Câmara",email = "igor.camara@datasinapse.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "aries-cloudcontroller (==1.3.2rc0.post20250822)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "passlib[bcrypt] (==1.7.4)",
    "bcrypt (==3.2.2)",
    "python-jose[cryptography] (==3.3.0)"
]

[tool.poetry]
packages = [{include = "api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
