[tool.poetry]
name = "api"
version = "0.1.0"
description = "Minha API FastAPI"
authors = ["Igor Câmara <igor.camara@datasinapse.com.br>"]
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.117.1,<0.118.0"
uvicorn = { version = ">=0.37.0,<0.38.0", extras = ["standard"] }
aries-cloudcontroller = "==1.3.2rc0.post20250822"
python-dotenv = ">=1.1.1,<2.0.0"
passlib = { version = "==1.7.4", extras = ["bcrypt"] }
bcrypt = "==3.2.2"
python-jose = { version = "==3.3.0", extras = ["cryptography"] }
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
